--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
+        "Bink",
         "bootcamp",
-        "lemonada"
+        "lemonada",
+        "onboardingone",
+        "onboardingthree",
+        "onboardingtwo"
     ]
 }
