--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   device_preview: ^1.2.0
   google_fonts: ^6.2.1
   flutter_screenutil: ^5.9.3
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
