--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,14 @@
 {
     "cSpell.words": [
+        "bannar",
         "Bink",
         "bootcamp",
+        "halfa",
+        "Imagestoji",
+        "Itemm",
         "lemonada",
+        "Locatoin",
+        "methalfa",
         "onboardingone",
         "onboardingthree",
         "onboardingtwo"
